--- a/First Project/index.html
+++ b/First Project/index.html
@@ -2,14 +2,43 @@
 <html>
 	<head>
 		<title>My first blog post</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
 	<body>
 		<h1>My first blog post</h1>
-		<img src ="html5.png">
-		<h2>This is my first blog post</h2>
-		<img src="logo.jpg">
-		
-		<p>Yolanda Williams</p>
+		<p class="main-text">
+		I often see the time 11:11 or 12:34 on clocks.
+I hear that Nancy is very pretty.
+He ran out of money, so he had to stop playing poker.
+He turned in the research paper on Friday; otherwise, he would have not passed the class.
+There was no ice cream in the freezer, nor did they have money to go to the store.
+He didn’t want to go to the dentist, yet he went anyway.
+I would have gotten the promotion, but my attendance wasn’t good enough.
+Sixty-Four comes asking for bread.
+		</p>
+		<img src ="logo.png">
+		<a href="http://www.udemy.com" target="_blank">Link to Udemy</a>
+		<a href="logo.png" target="_blank">Link to the picture</a>
+		<h2>This is my first blog post</h2>	
+		<p class="main-text">
+		Malls are great places to shop; I can find everything I need under one roof.
+She was too short to see over the fence.
+Mary plays the piano.
+Writing a list of random sentences is harder than I initially thought it would be.
+I think I will buy the red car, or I will lease the blue one.
+The book is in front of the table.
+If I don’t like something, I’ll stay away from it.
+The waves were crashing on the shore; it was a lovely sight.
+I hear that Nancy is very pretty.
+The clock within this blog and the clock on my laptop are 1 hour different from each other.
+The mysterious diary records the voice.
+A purple pig and a green donkey flew a kite in the middle of the night and ended up sunburnt.
+I'd rather be a bird than a fish.
+He told us a very exciting adventure story.
+Let me help you with your baggage.
+		</p>
+		<img src="profile.jpg">
+		<p class="author-text">Yolanda Williams</p>
 	</body>
 </html>
